--- a/assets/style.css
+++ b/assets/style.css
@@ -103,5 +103,5 @@ button.green-color {
   background-color: #6de981;
 }
 button.blue-color {
-  background-color: ##358ceb;
+  background-color: #358ceb;
 }
